force-app/main/default/objects/GiftDesignation/GiftDesignation.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>