force-app/main/default/objects/GiftDesignation/fields/Ammontare_Pagamenti_Fatti__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Pagamenti_Fatti__c</fullName>
    <label>Ammontare Pagamenti Fatti</label>
    <summarizedField>Overview_Budget_per_Anno__c.Ammontare_Pagamenti_Fatti__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>