force-app/main/default/objects/GiftDesignation/fields/Ammontare_Totale_Fatture__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Totale_Fatture__c</fullName>
    <label>Ammontare Totale Fatture</label>
    <summarizedField>Overview_Budget_per_Anno__c.Totale_Ammontare_Fatture__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>