force-app/main/default/objects/GiftDesignation/fields/Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Available_Budget__c</fullName>
    <formula>Totale_Distribuito_Pagato__c + Totale_Distribuito_NON_Pagato__c -  Totale_Fatture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>