force-app/main/default/objects/GiftDesignation/fields/DEFAULT_PRG__c.field-meta.xml
<CustomField>
    <fullName>DEFAULT_PRG__c</fullName>
    <formula>Partner__r.Default_per_Budgets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default per Programma</label>
    <type>Checkbox</type>
</CustomField>