force-app/main/default/objects/GiftDesignation/fields/Totale_Allocato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato__c</fullName>
    <label>Totale Allocato</label>
    <summarizedField>Overview_Budget_per_Anno__c.Totale_Allocato__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>