force-app/main/default/objects/GiftDesignation/fields/Totale_Distribuito_Pagato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Distribuito_Pagato__c</fullName>
    <label>Totale Distribuito Pagato</label>
    <summarizedField>Overview_Budget_per_Anno__c.Totale_Distribuito_Pagato__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>