force-app/main/default/objects/GiftDesignation/fields/Totale_Distribuzioni__c.field-meta.xml
<CustomField>
    <fullName>Totale_Distribuzioni__c</fullName>
    <label>Totale Distribuzioni</label>
    <summarizedField>Overview_Budget_per_Anno__c.Numero_Distribuzioni__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>