force-app/main/default/objects/GiftDesignation/fields/Totale_Minuti_di_Visita__c.field-meta.xml
<CustomField>
    <fullName>Totale_Minuti_di_Visita__c</fullName>
    <label>Totale Minuti di Visita</label>
    <summarizedField>Overview_Budget_per_Anno__c.Totale_Minuti_di_Visita__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>