force-app/main/default/objects/GiftDesignation/fields/Totale_Numero_di_Fatture__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_di_Fatture__c</fullName>
    <label>Totale Numero di Fatture</label>
    <summarizedField>Overview_Budget_per_Anno__c.Numero_di_Fatture__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>