force-app/main/default/objects/GiftDesignation/fields/Totale_Visite_Fatte__c.field-meta.xml
<CustomField>
    <fullName>Totale_Visite_Fatte__c</fullName>
    <label>Totale Visite Fatte</label>
    <summarizedField>Overview_Budget_per_Anno__c.Totale_Numero_di_Visite__c</summarizedField>
    <summaryForeignKey>Overview_Budget_per_Anno__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>