force-app/main/default/objects/GiftDesignation/listViews/All_GiftDesignations.listView-meta.xml
<ListView>
    <fullName>All_GiftDesignations</fullName>
    <columns>Name</columns>
    <columns>IsActive</columns>
    <columns>IsDefault</columns>
    <columns>DEFAULT_PRG__c</columns>
    <columns>TotalTransactionAmount</columns>
    <columns>CreatedDate</columns>
    <columns>Partner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Budgets</label>
</ListView>