force-app/main/default/objects/GiftDesignation/listViews/Budget_Tempo_Sospeso.listView-meta.xml
<ListView>
    <fullName>Budget_Tempo_Sospeso</fullName>
    <columns>Name</columns>
    <columns>IsActive</columns>
    <columns>Available_Budget__c</columns>
    <columns>Ammontare_Pagamenti_Fatti__c</columns>
    <columns>Ammontare_Pagamenti_Da_Pagare__c</columns>
    <columns>Totale_Fatture__c</columns>
    <columns>Totale_Visite_Fatte__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DEFAULT_PRG__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Tempo Sospeso</value>
    </filters>
    <label>Budget Tempo Sospeso</label>
</ListView>